fix horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -20472,4 +20472,6 @@ body.flyout-searchbar-active
 
 .info-column {
 	overflow-x: hidden;
+	max-width: 100%;
+	box-sizing: border-box;
 }
